# fridge-mate

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
build_noccache/log/: idf_py_stderr_output_3580  idf_py_stdout_output_3580
cmake/: patch_esp_sr.cmake  patch_esp_websocket_client.cmake
components/ai_agent/: CMakeLists.txt  ai_worker.cpp  llm_client.cpp  llm_context.cpp  prompt_builder.cpp  response_executor.cpp  response_parser.cpp
components/ai_agent/include/: ai_agent.hpp  llm_config.hpp  llm_context.hpp  llm_internal.hpp  llm_types.hpp  llm_utils.hpp
components/audio_hal/: CMakeLists.txt  asr_client.cpp  audio_hal.cpp  idf_component.yml  realtime_client.cpp  tts_client.cpp  volc_binary_protocol.cpp  wake_word_engine.cpp  websocket_diagnostics.cpp
components/audio_hal/include/: asr_client.hpp  audio_api.h  realtime_client.hpp  tts_client.hpp  volc_binary_protocol.hpp  wake_word_engine.hpp  websocket_diagnostics.hpp
components/dashboard/: CMakeLists.txt  dashboard.cpp  idf_component.yml  notes_board.cpp  weather.cpp
components/env_sensors/: CMakeLists.txt  rtc_time.c
components/esp_hosted/: .component_hash  CHECKSUMS.json  CMakeLists.txt  Kconfig  idf_component.yml
components/gui_app/: CMakeLists.txt  app_inventory.cpp  app_recipes.cpp  app_settings.cpp  gui_app.cpp  gui_components.cpp  gui_icons.cpp  (+6 more)
components/web_panel/: CMakeLists.txt  api_routes.cpp  api_routes.h  server_cert.pem  server_key.pem  web_server.cpp
components/web_panel/include/: web_panel.h
doc/: C 的开发路线.md  ESP32-P4-WIFI6-Touch-LCD-7B 开发板.md  UI 设计方案.md  功能设计.md  工程结构.md  开发者 A 开发指南.md  语音唤醒与本地命令指南.md  项目进展与问题.md
main/: CMakeLists.txt  main.cpp  system_events.h  task_manager.cpp
web_frontend/: app.js  index.html  style.css
(+65 files in other folders)
